<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:padding="15dp"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_get_pro_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/get_pro_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/fragment_get_pro_price_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_pro_purchase_price"
                android:textAlignment="textStart"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/donations__fragment_google_get_pro_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_pro_button_text"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
