<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/context_layout_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/context_layout_card_view_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/context_layout_context_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/context_name"
                    android:layout_marginEnd="80dp"
                    android:textColor="#000000"
                    android:textSize="23sp" />

                <LinearLayout
                    android:id="@+id/context_layout_details_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/context_layout_context_name"
                    android:orientation="vertical"
                    android:layout_marginEnd="40dp">

                    <LinearLayout
                        android:id="@+id/context_layout_details_first_row_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:weightSum="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/context_layout_details_first_row_frequency_text_view"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/frequency"
                            android:gravity="center_vertical"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/context_layout_details_first_row_apply_disable_times_text_view"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/apply_and_disable_times"
                            android:textColor="#000000"
                            android:gravity="center_vertical|end"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/context_layout_details_second_row_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:weightSum="16"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/context_layout_details_second_row_address_text_view"
                            android:layout_width="0dp"
                            android:layout_weight="13"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:gravity="center_vertical"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/context_layout_details_second_row_radius_text_view"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="wrap_content"
                            android:text="@string/radius"
                            android:textColor="#000000"
                            android:gravity="end" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/context_layout_enable_switch"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme" />

                <ImageView
                    android:id="@+id/context_layout_running_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/context_layout_enable_switch"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/running"/>
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
