<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_settings_distance_unit_text_input_layout"
        android:layout_width="match_parent"
        android:hint="@string/type"
        android:textColorHint="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_settings_distance_unit_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/distance_measure"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <Spinner
            android:id="@+id/fragment_settings_distance_unit_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="14"
            android:entries="@array/distance_measure"
            android:inputType="text|textCapSentences"
            android:maxLength="20"
            android:textColorHint="#000000"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_settings_applications_list_text_input_layout"
        android:layout_below="@id/fragment_settings_distance_unit_text_input_layout"
        android:layout_width="match_parent"
        android:hint="@string/type"
        android:textColorHint="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_settings_applications_list_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/applications"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <Spinner
            android:id="@+id/fragment_settings_applications_list_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="14"
            android:entries="@array/applications_list"
            android:inputType="text|textCapSentences"
            android:maxLength="20"
            android:textColorHint="#000000"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView

        android:id="@+id/fragment_settings_pro_label_text_view"
        android:layout_below="@id/fragment_settings_applications_list_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorAccent"
        android:text="@string/fragment_settings_pro_title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_settings_receive_notifications_text_input_layout"
        android:layout_below="@id/fragment_settings_pro_label_text_view"
        android:layout_width="match_parent"
        android:textColorHint="#000000"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="5">

            <TextView
                android:id="@+id/fragment_settings_receive_notifications_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/receive_notifications"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/fragment_settings_receive_notifications_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:enabled="false"
                android:checked="true"/>

        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_settings_ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-9125265928210219/6676307037">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
